deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprint-3-back
spec:
  selector:
    app: sprint-3-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
  type: ClusterIP
